# TelemetryWatch

./: .gitignore  .password-reminder  Cargo.toml  DEMO_GUIDE.md  LICENSE  README.md  REMINDER.md  docker-compose.supabase.yml  docker-compose.yml  env.example  railway.json  render.yaml
config/: prometheus.yml
config/grafana/dashboards/: telemetrywatch.json
docker/: Dockerfile
src/: api.rs  config.rs  db.rs  main.rs  metrics.rs  middleware.rs  platform.rs
static/: index.html
