[package]
name = "telemetrywatch"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TelemetryWatch Contributors"]
description = "Open-source observability platform with platform control plane for Supabase projects"
repository = "https://github.com/ektabhardwaj07/TelemetryWatch"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde", "clock"] }

# Configuration
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI/Swagger documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

